# logos-fs

./: Cargo.toml  README.md  README.zh.md  build.rs  sandbox.Dockerfile  test.Dockerfile
.cargo/: config.toml  protoc-wrapper.sh
crates/logos-kernel/: Cargo.toml  build.rs
crates/logos-kernel/src/: builtin_tools.rs  consolidator.rs  context.rs  cron.rs  devices.rs  grpc.rs  main.rs  proc.rs  proc_store.rs  sandbox.rs  services.rs  tmp.rs  token.rs  users.rs
crates/logos-kernel/src/builtin_tools/: browse.rs  memory.rs  mod.rs  system.rs  web_search.rs
crates/logos-kernel/tests/: runtime_simulation.rs
crates/logos-mcp/: Cargo.toml  build.rs
crates/logos-mcp/src/: main.rs
crates/logos-mm/: Cargo.toml
crates/logos-mm/src/: graph.rs  lib.rs  messages.rs  plugin.rs  summaries.rs  views.rs
crates/logos-session/: Cargo.toml
crates/logos-session/src/: lib.rs
crates/logos-system/: Cargo.toml
crates/logos-system/src/: anchors.rs  complete.rs  lib.rs  search.rs  tasks.rs
crates/logos-vfs/: Cargo.toml
crates/logos-vfs/src/: lib.rs  middleware.rs  namespace.rs  table.rs  uri.rs
data/state/: system.db
proto/: logos.proto  vfs.proto
src/: anchor_store.rs  consolidator.rs  embedding.rs  llm_client.rs  main.rs  message_store.rs  persona_store.rs  router.rs  service.rs  sessions_store.rs  task_store.rs  users_store.rs
