[package]
name = "memory-vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14.3"
tokio-stream = { version = "0.1", features = ["net"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
arrow-array = "57"
arrow-schema = "57"
futures-util = "0.3"
lancedb = "0.26"

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.3"
protoc-bin-vendored = "3"
