[package]
name = "logos-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
logos-vfs = { path = "../logos-vfs" }
logos-mm = { path = "../logos-mm" }
logos-system = { path = "../logos-system" }
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14.3"
tokio-stream = { version = "0.1", features = ["net"] }
serde_json = "1"
dotenvy = "0.15"

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.3"
protoc-bin-vendored = "3"
