[package]
name = "logos-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
logos-vfs = { path = "../logos-vfs" }
logos-mm = { path = "../logos-mm" }
logos-system = { path = "../logos-system" }
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "sync"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14.3"
tokio-stream = { version = "0.1", features = ["net"] }
serde_json = "1"
futures-util = "0.3"
chrono = "0.4"
cron = "0.15"
serde_yaml = "0.9"
dotenvy = "0.15"

serde = { version = "1", features = ["derive"] }
containerd-client = "0.8.0"
prost-types = "0.13"
libc = "0.2.183"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
logos-session = { path = "../logos-session" }

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.3"
protoc-bin-vendored = "3"
