[package]
name = "logos-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "logos-mcp"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.3"
protoc-bin-vendored = "3"
