[package]
name = "logos-session"
version = "0.1.0"
edition = "2024"

[dependencies]
logos-vfs = { path = "../logos-vfs" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
lancedb = "0.23"
arrow-array = "56"
arrow-schema = "56"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
