[package]
name = "logos-session"
version = "0.1.0"
edition = "2024"

[dependencies]
logos-vfs = { path = "../logos-vfs" }
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
arrow = { version = "57", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
lzma-sys = { version = "0.1", features = ["static"] }

[dev-dependencies]
tempfile = "3"
