[package]
name = "logos-system"
version = "0.1.0"
edition = "2024"

[dependencies]
logos-vfs = { path = "../logos-vfs" }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
